debut gestion compte utilisateur

--- a/view/assets/CSS/style.css
+++ b/view/assets/CSS/style.css
@@ -2,22 +2,27 @@
 html {
     min-height: 100% !important;
 }
+
 /*couleur du survol des liens*/
 a.text-info:hover {
     color: aliceblue !important;
 }
+
 /*taille des images*/
 img {
     width: 100% !important;
 }
+
 /*gestion des bordures*/
 .border-lg-none {
     border-style: none !important;
 }
+
 /*taille du texte des "cartes"*/
 .potitext {
     font-size: small;
 }
+
 /*navbar en noir opacité 80% */
 nav.navbar-light {
     background-color: black !important;
@@ -27,13 +32,21 @@ nav.navbar-light {
 }
 
 /*opacité a 60%*/
-div.bg-dark{
+div.bg-dark {
     background: rgba(0, 0, 0, 0.6) !important;
 }
 
 /*fond du footer transparent*/
 footer.bleh {
     background: rgba(0, 0, 0, 0) !important;
+    padding-left: 1px !important;
+    padding-right: 1px !important;
+}
+/*div.fondopac{*/
+/*    background: rgba(0,0,0,0.6);*/
+/*}*/
+label.fondopac{
+    background: rgba(0,0,0,0.5);
 }
 
 /*image de fond du body + grille verticale pour que la page soit prise entièrement et pas avoir un footer au milieu de la page*/
@@ -53,6 +66,7 @@ body {
         height: 100% !important;
         overflow: hidden;
     }
+
     /*bordures quand taille réduite*/
     .border-lg-none {
         border-style: solid !important;
